nginx/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-two-sites
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-two-sites
  template:
    metadata:
      labels:
        app: nginx-two-sites
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: crc1-html
          mountPath: /usr/share/nginx/html/crc1
        - name: crc2-html
          mountPath: /usr/share/nginx/html/crc2
        resources:
          limits:
            cpu: "50m"
            memory: "100Mi"
          requests:
            cpu: "20m"
            memory: "64Mi"
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-two-sites-config
        - name: crc1-html
          configMap:
            name: html-pages
            items:
              - key: crc1-index.html
                path: index.html
              - key: crc1-kontakt.html
                path: kontakt.html
              - key: crc1-404.html
                path: 404.html
        - name: crc2-html
          configMap:
            name: html-pages
            items:
              - key: crc2-index.html
                path: index.html
