nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-two-sites-service
spec:
  selector:
    app: nginx-two-sites
  ports:
  - port: 80
    targetPort: 80
